overflow-x deficiency is fixed

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -2,7 +2,6 @@
 body {
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -103,6 +102,7 @@ body> main> section:nth-child(1) {
     position: relative;
     width: 100%;
     height: 90vh;
+    overflow-x: hidden;
 }
 body> main> section:nth-child(1)> nav {
     position: absolute;
@@ -122,12 +122,12 @@ body> main> section:nth-child(1)> div:nth-child(2) {
     background-size: cover;
     z-index: -1;
     position: absolute;
-    height: 60%;
-    width: 348px;
+    height: 64%;
+    width: 312px;
     display: inline-block;
     left: 0;
     right: 0;
-    top: 0;
+    top: -13px;
     margin: auto;
 }
 body> main> section:nth-child(1)> div> h3 {
